--- a/NET45/NET45.csproj
+++ b/NET45/NET45.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{FC3718BA-4EB5-4E27-AFD9-67E35D37BD44}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NETPath.Toolkit.NET45</RootNamespace>
-    <AssemblyName>NETPath.Toolkit.NET45</AssemblyName>
+    <RootNamespace>NETPath.SDK.NET45</RootNamespace>
+    <AssemblyName>NETPath.SDK.NET45</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
