--- a/NET40/NET40.csproj
+++ b/NET40/NET40.csproj
@@ -38,7 +38,7 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Utilities.NET40">
-      <HintPath>..\..\..\System.Utilities\Build\System.Utilities.NET40.dll</HintPath>
+      <HintPath>..\System.Utilities\Build\System.Utilities.NET40.dll</HintPath>
     </Reference>
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
