--- a/Designer/Designer.csproj
+++ b/Designer/Designer.csproj
@@ -156,6 +156,7 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Web" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Utilities.NET45">
       <HintPath>..\..\..\System.Utilities\Build\System.Utilities.NET45.dll</HintPath>
     </Reference>
