--- a/Projects/Projects.csproj
+++ b/Projects/Projects.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Web" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Utilities.NET45">
       <HintPath>..\..\..\System.Utilities\Build\System.Utilities.NET45.dll</HintPath>
     </Reference>
