--- a/WinRT8/WinRT8.csproj
+++ b/WinRT8/WinRT8.csproj
@@ -108,9 +108,14 @@
     <Compile Include="DeltaStack.cs" />
     <Compile Include="DependencyQueue.cs" />
     <Compile Include="DependencyStack.cs" />
+    <Compile Include="DREObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="protobufnet-portable, Version=2.0.0.627, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\protobufnet-portable.dll</HintPath>
+    </Reference>
     <Reference Include="System.Utilities.WinRT8">
       <HintPath>..\System.Utilities\Build\System.Utilities.WinRT8.dll</HintPath>
     </Reference>
