--- a/NETCSharpGenerator/NET CSharp Generator.csproj
+++ b/NETCSharpGenerator/NET CSharp Generator.csproj
@@ -55,7 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bindings.cs" />
-    <None Include="RESTService.cs" />
+    <Compile Include="RESTService.cs" />
     <Compile Include="Data.cs" />
     <Compile Include="DataType.cs" />
     <Compile Include="Documentation.cs" />
