--- a/NET40/NET40.csproj
+++ b/NET40/NET40.csproj
@@ -11,7 +11,8 @@
     <AssemblyName>NETPath.SDK.NET40</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -43,6 +44,7 @@
     <Reference Include="System.Net" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Utilities.NET40">
       <HintPath>..\System.Utilities\Build\System.Utilities.NET40.dll</HintPath>
     </Reference>
@@ -72,6 +74,7 @@
     <Compile Include="DREObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RESTClientBase.cs" />
+    <Compile Include="RESTServerBase.cs" />
     <Compile Include="ServerBase.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
