--- a/MSBuild.ExtensionPack.VersionNumber.targets
+++ b/MSBuild.ExtensionPack.VersionNumber.targets
@@ -32,12 +32,12 @@
 
     <!-- Propeties for controlling extended assembly attributes -->
     <PropertyGroup>
-        <AssemblyCompany>Prospective Software Inc.</AssemblyCompany>
+        <AssemblyCompany>Prospective Software</AssemblyCompany>
         <AssemblyConfiguration></AssemblyConfiguration>
-        <AssemblyCopyright>Copyright © 2012-2013 Prospective Software Inc.</AssemblyCopyright>
+        <AssemblyCopyright>Copyright © 2012-2013 Prospective Software</AssemblyCopyright>
         <AssemblyCulture></AssemblyCulture>
         <AssemblyDescription></AssemblyDescription>
-        <AssemblyProduct>NETPath 2</AssemblyProduct>
+        <AssemblyProduct>NETPath</AssemblyProduct>
         <AssemblyTitle></AssemblyTitle>
     </PropertyGroup>
 
