Repath Prospective.Controls

--- a/Designer/Designer.csproj
+++ b/Designer/Designer.csproj
@@ -116,7 +116,7 @@
     <Reference Include="PresentationFramework.Aero" />
     <Reference Include="Prospective.Controls, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Prospective\Controls\Build\Prospective.Controls.dll</HintPath>
+      <HintPath>..\..\..\Components\Build\Prospective.Controls.dll</HintPath>
     </Reference>
     <Reference Include="ReachFramework" />
     <Reference Include="Syncfusion.Core, Version=11.104.0.21, Culture=neutral, PublicKeyToken=632609b4d040f6b4, processorArchitecture=MSIL" />
