--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -40,8 +40,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="LogicNP.CryptoLicensing, Version=10.0.0.0, Culture=neutral, PublicKeyToken=4a3c0a4c668b48b4">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="LogicNP.CryptoLicensing">
       <HintPath>C:\Program Files (x86)\LogicNP Software\CryptoLicensing For .Net 2013 R2\LogicNP.CryptoLicensing.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
