Fixed licensing in NPSC

--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -26,7 +26,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\Build\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -70,6 +70,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Designer\Designer.csproj">
+      <Project>{26437a88-ccc9-4006-be4e-2eb3eac8d78d}</Project>
+      <Name>Designer</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Interfaces\Interfaces.csproj">
       <Project>{6594cd45-2f17-4353-8cfc-8c314092821e}</Project>
       <Name>Interfaces</Name>
