--- a/NET40/NET40.csproj
+++ b/NET40/NET40.csproj
@@ -59,6 +59,8 @@
   <ItemGroup>
     <Compile Include="ChangeListItem.cs" />
     <Compile Include="ClientBase.cs" />
+    <Compile Include="CMDObject.cs" />
+    <Compile Include="CMDProperty.cs" />
     <Compile Include="DeltaCollectionBase.cs" />
     <Compile Include="DeltaObject.cs" />
     <Compile Include="DeltaProperty.cs" />
