--- a/NET40/NET40.csproj
+++ b/NET40/NET40.csproj
@@ -62,8 +62,8 @@
     <Compile Include="CMDObject.cs" />
     <Compile Include="CMDProperty.cs" />
     <Compile Include="DeltaCollectionBase.cs" />
-    <Compile Include="DeltaObject.cs" />
-    <Compile Include="DeltaProperty.cs" />
+    <Compile Include="DREObject.cs" />
+    <Compile Include="DREProperty.cs" />
     <Compile Include="DeltaDictionary.cs" />
     <Compile Include="DeltaList.cs" />
     <Compile Include="DependencyDictionary.cs" />
@@ -71,7 +71,6 @@
     <Compile Include="DependencyObjectEx.cs" />
     <Compile Include="DependencyQueue.cs" />
     <Compile Include="DependencyStack.cs" />
-    <Compile Include="DREObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RESTClientBase.cs" />
     <Compile Include="RESTServerBase.cs" />
