--- a/WinRT8/WinRT8.csproj
+++ b/WinRT8/WinRT8.csproj
@@ -101,14 +101,13 @@
     <Compile Include="DeltaCollectionBase.cs" />
     <Compile Include="DeltaDictionary.cs" />
     <Compile Include="DeltaList.cs" />
-    <Compile Include="DeltaObject.cs" />
-    <Compile Include="DeltaProperty.cs" />
     <Compile Include="DependencyDictionary.cs" />
     <Compile Include="DependencyList.cs" />
     <Compile Include="DependencyObjectEx.cs" />
     <Compile Include="DependencyQueue.cs" />
     <Compile Include="DependencyStack.cs" />
     <Compile Include="DREObject.cs" />
+    <Compile Include="DREProperty.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RESTClientBase.cs" />
   </ItemGroup>
