--- a/NET45/NET45.csproj
+++ b/NET45/NET45.csproj
@@ -72,6 +72,7 @@
     <Compile Include="DependencyList.cs" />
     <Compile Include="DREObject.cs" />
     <Compile Include="DREProperty.cs" />
+    <Compile Include="MultiUserValue.cs" />
     <Compile Include="RESTClientBase.cs" />
     <Compile Include="RESTServerBase.cs" />
     <Compile Include="ServerBase.cs" />
