Client/Server Async/Sync state is now selectable on a per method basis. Callbacks now have their own Method editor.

--- a/Designer/Designer.csproj
+++ b/Designer/Designer.csproj
@@ -303,6 +303,9 @@
     <Compile Include="Interface\Service\DataChangeMethod.xaml.cs">
       <DependentUpon>DataChangeMethod.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Interface\Service\Callback.xaml.cs">
+      <DependentUpon>Callback.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Interface\Service\Method.xaml.cs">
       <DependentUpon>Method.xaml</DependentUpon>
     </Compile>
@@ -500,6 +503,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Interface\Service\DataChangeMethod.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Interface\Service\Callback.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
