--- a/Projects/Projects.csproj
+++ b/Projects/Projects.csproj
@@ -105,7 +105,7 @@
   <ItemGroup>
     <Compile Include="Binding.cs" />
     <Compile Include="CompilerMessages.cs" />
-    <Compile Include="RESTService.cs" />
+    <Compile Include="RestService.cs" />
     <Compile Include="Data.cs" />
     <Compile Include="DataType.cs" />
     <Compile Include="Documentation.cs" />
