--- a/Designer/Designer.csproj
+++ b/Designer/Designer.csproj
@@ -284,17 +284,17 @@
     <Compile Include="Interface\Project\Project.xaml.cs">
       <DependentUpon>Project.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Interface\REST\Converters.cs" />
-    <Compile Include="Interface\REST\HttpWebConfig.xaml.cs">
+    <Compile Include="Interface\Rest\Converters.cs" />
+    <Compile Include="Interface\Rest\HttpWebConfig.xaml.cs">
       <DependentUpon>HttpWebConfig.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Interface\REST\HttpClientConfig.xaml.cs">
+    <Compile Include="Interface\Rest\HttpClientConfig.xaml.cs">
       <DependentUpon>HttpClientConfig.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Interface\REST\Method.xaml.cs">
+    <Compile Include="Interface\Rest\Method.xaml.cs">
       <DependentUpon>Method.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Interface\REST\Service.xaml.cs">
+    <Compile Include="Interface\Rest\Service.xaml.cs">
       <DependentUpon>Service.xaml</DependentUpon>
     </Compile>
     <Compile Include="Interface\Service\Converters.cs" />
@@ -484,19 +484,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Interface\REST\HttpWebConfig.xaml">
+    <Page Include="Interface\Rest\HttpWebConfig.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Interface\REST\HttpClientConfig.xaml">
+    <Page Include="Interface\Rest\HttpClientConfig.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Interface\REST\Method.xaml">
+    <Page Include="Interface\Rest\Method.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Interface\REST\Service.xaml">
+    <Page Include="Interface\Rest\Service.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
